--- a/Tic-Tac-Toe/Readme
+++ b/Tic-Tac-Toe/Readme
@@ -1,1 +1,2 @@
-This is a Game
+Welcome to the Tic-Tac-Toe Website! Enjoy the timeless game of Tic-Tac-Toe, playing against a friend, and see who can get three in a row first.
+
